# deindex

./: .gitignore  Cargo.toml  README.md
apps/ap/: Cargo.toml
apps/ap/src/: main.rs
contracts/daxos/: Cargo.toml
contracts/daxos/src/: lib.rs  main.rs
contracts/decks/: Cargo.toml
contracts/decks/src/: lib.rs  main.rs
contracts/decor/: Cargo.toml
contracts/decor/src/: lib.rs  main.rs
contracts/devil/: Cargo.toml
contracts/devil/src/: lib.rs  main.rs  program.rs  test.rs
contracts/dimer/: Cargo.toml
contracts/dimer/src/: lib.rs  main.rs  old_lib.rs
contracts/dion/: Cargo.toml
contracts/dion/src/: lib.rs  main.rs
contracts/dior/: Cargo.toml
contracts/dior/src/: lib.rs
contracts/disolver/: Cargo.toml
contracts/disolver/src/: filler.rs  lib.rs  main.rs  quoter.rs  single_order.rs  solver.rs
contracts/dres/: Cargo.toml
contracts/dres/src/: lib.rs  main.rs
contracts/dres2/: Cargo.toml
contracts/dres2/src/: lib.rs
contracts/drip/: Cargo.toml
contracts/drip/src/: lib.rs  main.rs
contracts/gateway/: Cargo.toml
contracts/gateway/src/: lib.rs  main.rs
contracts/market/: Cargo.toml
contracts/market/src/: lib.rs  main.rs
contracts/scripts/: check.sh  test-debug.sh
contracts/vault/: Cargo.toml
contracts/vault/src/: lib.rs
docs/: Components.drawio  CreateIndex.drawio  DeIndex.drawio  DeIndex2.drawio  EnqueueIntoBatchOrders.drawio  InstantFill.drawio  ProcessBatchOrders.drawio  SubmitInventory.drawio  UpdateIndexQuotes.drawio
libs/deli/: Cargo.toml
libs/deli/src/: amount.rs  asset.rs  labels.rs  lib.rs  log.rs  math.rs  vector.rs  vis.rs  vis_macros.rs
libs/delib/: Cargo.toml
libs/delib/src/: amount.rs  lib.rs  log.rs
libs/demerkle/: mk.rs
libs/icore/: Cargo.toml
libs/icore/src/: lib.rs
libs/icore/src/vil/: execute_buy_order.rs  solve_quadratic.rs  update_quote.rs  update_supply.rs
proc-macros/amount-macros/src/: lib.rs
proc-macros/devil-macros/: Cargo.toml
proc-macros/devil-macros/src/: lib.rs
proc-macros/labels-macros/src/: lib.rs
scripts/: all-contracts-check.sh  check.sh  deploy.sh  export-abi.sh  github.actions.yaml  test-debug.sh  vars.sh
