[package]
name = "delib"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = "=0.8.20"
alloy-sol-types = "=0.8.20"
stylus-sdk = { version = "0.9.0", optional = true }
hex = { version = "0.4", default-features = false }

[dev-dependencies]
alloy-primitives = { version = "=0.8.20", features = ["sha3-keccak"] }
stylus-sdk = { version = "0.9.0", features = ["stylus-test"] }

[features]
debug = []
stylus = ["stylus-sdk"]
stylus-test = ["stylus", "debug"]

[lib]
crate-type = ["lib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"

# If you need to reduce the binary size, it is advisable to try other
# optimization levels, such as "s" and "z"
opt-level = "s"